// Vitest Snapshot v1

exports[`Attributes > boolean 1`] = `
{
  "children": [
    {
      "children": [
        {
          "attributes": {
            "prop": true,
          },
          "children": [],
          "data": {
            "hName": "test",
            "hProperties": {
              ":prop": "true",
            },
          },
          "fmAttributes": {},
          "name": "test",
          "position": {
            "end": {
              "column": 12,
              "line": 1,
              "offset": 11,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "textComponent",
        },
      ],
      "position": {
        "end": {
          "column": 12,
          "line": 1,
          "offset": 11,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": {
    "end": {
      "column": 12,
      "line": 1,
      "offset": 11,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`Attributes > class-suger 1`] = `
{
  "children": [
    {
      "children": [
        {
          "attributes": {
            "class": "class another-class",
            "key": "value",
          },
          "children": [],
          "data": {
            "hName": "test",
            "hProperties": {
              "class": "class another-class",
              "key": "value",
            },
          },
          "fmAttributes": {},
          "name": "test",
          "position": {
            "end": {
              "column": 41,
              "line": 1,
              "offset": 40,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "textComponent",
        },
      ],
      "position": {
        "end": {
          "column": 41,
          "line": 1,
          "offset": 40,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": {
    "end": {
      "column": 41,
      "line": 1,
      "offset": 40,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`Attributes > html-characters 1`] = `
{
  "children": [
    {
      "children": [
        {
          "attributes": {
            "icon": "©",
          },
          "children": [],
          "data": {
            "hName": "test",
            "hProperties": {
              "icon": "©",
            },
          },
          "fmAttributes": {},
          "name": "test",
          "position": {
            "end": {
              "column": 21,
              "line": 1,
              "offset": 20,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "textComponent",
        },
      ],
      "position": {
        "end": {
          "column": 21,
          "line": 1,
          "offset": 20,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": {
    "end": {
      "column": 21,
      "line": 1,
      "offset": 20,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`Attributes > html-characters-unquoted 1`] = `
{
  "children": [
    {
      "children": [
        {
          "attributes": {
            "icon": "©",
          },
          "children": [],
          "data": {
            "hName": "test",
            "hProperties": {
              "icon": "©",
            },
          },
          "fmAttributes": {},
          "name": "test",
          "position": {
            "end": {
              "column": 19,
              "line": 1,
              "offset": 18,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "textComponent",
        },
      ],
      "position": {
        "end": {
          "column": 19,
          "line": 1,
          "offset": 18,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": {
    "end": {
      "column": 19,
      "line": 1,
      "offset": 18,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`Attributes > id-suger 1`] = `
{
  "children": [
    {
      "children": [
        {
          "attributes": {
            "id": "id",
          },
          "children": [],
          "data": {
            "hName": "test",
            "hProperties": {
              "id": "id",
            },
          },
          "fmAttributes": {},
          "name": "test",
          "position": {
            "end": {
              "column": 11,
              "line": 1,
              "offset": 10,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "textComponent",
        },
      ],
      "position": {
        "end": {
          "column": 11,
          "line": 1,
          "offset": 10,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": {
    "end": {
      "column": 11,
      "line": 1,
      "offset": 10,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`Attributes > invlid-binding 1`] = `
{
  "children": [
    {
      "children": [
        {
          "attributes": {},
          "children": [],
          "data": {
            "hName": "test",
            "hProperties": {},
          },
          "fmAttributes": {},
          "name": "test",
          "position": {
            "end": {
              "column": 6,
              "line": 1,
              "offset": 5,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "textComponent",
        },
        {
          "position": {
            "end": {
              "column": 9,
              "line": 1,
              "offset": 8,
            },
            "start": {
              "column": 6,
              "line": 1,
              "offset": 5,
            },
          },
          "type": "text",
          "value": "{:}",
        },
      ],
      "position": {
        "end": {
          "column": 9,
          "line": 1,
          "offset": 8,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": {
    "end": {
      "column": 9,
      "line": 1,
      "offset": 8,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`Attributes > value-with-space 1`] = `
{
  "children": [
    {
      "children": [
        {
          "attributes": {
            "attr": "value",
          },
          "children": [],
          "data": {
            "hName": "test",
            "hProperties": {
              "attr": "value",
            },
          },
          "fmAttributes": {},
          "name": "test",
          "position": {
            "end": {
              "column": 19,
              "line": 1,
              "offset": 18,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "textComponent",
        },
      ],
      "position": {
        "end": {
          "column": 19,
          "line": 1,
          "offset": 18,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": {
    "end": {
      "column": 19,
      "line": 1,
      "offset": 18,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;
